@@ -1068,7 +1068,6 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
         }
 
         final AlgDataType jdbcType = QueryProcessorHelpers.makeStruct( root.alg.getCluster().getTypeFactory(), root.validatedRowType );
-        List<List<String>> fieldOrigins = Collections.nCopies( jdbcType.getFieldCount(), null );
 
         final Prefer prefer = Prefer.ARRAY;
         final Convention resultConvention =
@@ -1114,7 +1113,7 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
         return new PreparedResultImpl<>(
                 resultType,
                 parameterRowType,
-                fieldOrigins,
+                Collections.nCopies( jdbcType.getFieldCount(), null ), // we do not have the origin of the fields so we provide null for all
                 root.collation.getFieldCollations().isEmpty()
                         ? ImmutableList.of()
                         : ImmutableList.of( root.collation ),
@@ -1397,7 +1396,7 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
             // Get approximated costs and cache routing plans
             approximatedCosts = proposed.plans.stream()
                     .map( p -> p.optimalNode().computeSelfCost( getPlanner(), p.optimalNode().getCluster().getMetadataQuery() ) )
-                    .collect( Collectors.toList() );
+                    .toList();
             this.cacheRouterPlans(
                     proposedRoutingPlans,
                     approximatedCosts,
